# remote_pc_insight

./: .gitignore  API.md  API_SPEC.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DA.md  DB_SCHEMA.md  DEPLOYMENT.md  INSTALL_AGENT.md  LICENSE  MASTER_PLAN.md  PRIVACY.md  README.md  RUNBOOK.md  RUN_LOG.md  SECURITY.md  TRD.md  TROUBLESHOOTING.md  render.yaml
agent/: .eslintrc.cjs  package-lock.json  package.json
docs/: AI_COPILOT_P0_P3_PLAN.md  CHANGELOG.md  CLI_WEB_SECURITY_AUDIT_2026-02-14.md  DEPLOYMENT.md  FUNCTIONAL_SPEC.md  GAP_ANALYSIS_REPORT.md  INTRO_VIDEO_GUIDE_FREE.md  PC_ONBOARDING_INSTALL_PLAN.md  PRD.md  REMEDIATION_P0_P3_CHECKLIST.md  RENDER_NEON_DEPLOY_CHECKLIST.md  (+3 more)
server/: .env.production.example  pyproject.toml  pytest.ini  requirements.txt  vercel.json
server/app/: main.py
server/app/api/v1/: deps.py
server/app/api/v1/routers/: agent.py  ai.py  auth.py  commands.py  devices.py  reports.py  tokens.py
server/app/core/: bootstrap.py  config.py  database.py  security.py
server/app/models/: __init__.py
server/app/services/: ai_copilot.py  ai_guardrails.py  ai_runtime.py  request_rate_limit.py
server/tests/: conftest.py
server/tests/api/: test_agent_integration.py  test_ai_guardrails.py  test_ai_regression_matrix.py  test_ai_runtime.py  test_ai_summary.py  test_ai_trends.py  test_ai_versions.py  test_auth_me.py  test_csrf_deps.py  test_health.py  test_report_export_pdf.py  test_security_settings.py  test_token_enroll_status.py
server/tests/e2e/: conftest.py  test_ai_copilot_flow.py  test_auth_refresh_flow.py  test_full_flow.py
(+59 files in other folders)
